--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@ layout: default
 title: Tim Cameron 
 ---
 
-<img src="http://imgur.com/NlyR67p.jpg" alt="color photo ftl" />
+<img src="http://imgur.com/NvHwdRn.jpg" alt="color photo ftl" />
 <p>I'm Tim Cameron, an economist in Melbourne. I work at <a href="https://grattan.edu.au">Grattan Institute</a>.  I like building basic web apps about Australian labour markets.</p>
