--- a/index.html
+++ b/index.html
@@ -4,4 +4,4 @@ title: Tim Cameron
 ---
 
 <img src="http://imgur.com/NvHwdRn.jpg" alt="color photo ftl" />
-<p>I'm Tim Cameron, an economist in Melbourne. I work at <a href="https://grattan.edu.au">Grattan Institute</a>.  I like building basic web apps about Australian labour markets.</p>
+<p>I'm Tim Cameron, an economist in Melbourne. I work at <a href="https://grattan.edu.au">Grattan Institute</a>. Contact me at gmail - timothy.cameron2 .</p>
